force-app/main/default/objects/Dummy39__c/Dummy39__c.object-meta.xml
<CustomObject>
    <label>Dummy39</label>
    <nameField>
        <label>Dummy39 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy39</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>