force-app/main/default/objects/Dummy39__c/fields/FooBar011__c.field-meta.xml
<CustomField>
    <fullName>FooBar011__c</fullName>
    <label>FooBar011</label>
    <length>255</length>
    <type>Text</type>
</CustomField>