force-app/main/default/objects/Dummy39__c/fields/FooBar028__c.field-meta.xml
<CustomField>
    <fullName>FooBar028__c</fullName>
    <label>FooBar028</label>
    <length>255</length>
    <type>Text</type>
</CustomField>