force-app/main/default/objects/Dummy39__c/fields/FooBar039__c.field-meta.xml
<CustomField>
    <fullName>FooBar039__c</fullName>
    <label>FooBar039</label>
    <length>255</length>
    <type>Text</type>
</CustomField>